--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 
-:root {
+ :root {
     --font-heading: Sen, sans-serif;
     --primary-color: #FFB900;
 }
@@ -499,7 +499,54 @@ a {
     line-height: 1.54;
 }
 
-font-weight: 400;
-line-height: 1.54;
 
+/* Features */
+
+.features {
+    margin-top: 135px;
+    padding: 65px 0;
+}
+
+.features .body {
+    display: flex;
+    justify-content: space-between;
+}
+
+.features .images {
+    display: flex;
+    gap: 0 30px;
+}
+
+.features .images img {
+    width: 270px;
+    height: 404px;
+    border-radius: 16px;
+    object-fit: cover;
+}
+
+.features img.lower {
+    margin-top: 34px;
+}
+
+.features .content {
+    width: 41%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.features .desc {
+    margin-top: 16px;
+    color: #5F5B53;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.75;
+}
+
+.features .content .cta-btn {
+    min-width: 137px;
+    margin-top: 32px;
+    color: #fff;
+    background: var(--primary-color);
 }
